added more to html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Code Quiz</title>
 </head>
-<header> Code Quiz</header>
-<h1></h1>
+<header> View Highscores</header>
+<h1> Code Quiz</h1>
+<h2>Try and finish the quiz before the time runs out!</h2>
 <body>
-    
+    <div>Commanly used data types do NOT include: </div>
+    <li> a boolean</li>
+    <li> string</li>
+    <li> alerts</li>
+    <li> numbers</li>
 </body>
 </html>
