--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <h2 class="heads">Try and finish the quiz before the time runs out!</h2>
 <body>
     <div>Commanly used data types do NOT include: </div>
-    <li> a boolean</li>
-    <li> string</li>
-    <li> alerts</li>
-    <li> numbers</li>
+    <button> a boolean</button>
+    <button> string</button>
+    <button> alerts</button>
+    <button> numbers</button>
 </body>
 </html>
