--- a/index.html
+++ b/index.html
@@ -11,10 +11,34 @@
 <h1 class="heads"> Code Quiz</h1>
 <h2 class="heads">Try and finish the quiz before the time runs out!</h2>
 <body>
+    <button> Start </button>
+    <div></div>
+
     <div>Commanly used data types do NOT include: </div>
-    <button> a boolean</button>
-    <button> string</button>
-    <button> alerts</button>
-    <button> numbers</button>
+    <button>1. a boolean</button>
+    <button>2. string</button>
+    <button>3. alerts</button>
+    <button>4. numbers</button>
+
+    <div> String values need to be enclosed with..</div>
+    <button>1. ""</button>
+    <button>2. ()</button>
+    <button>3. []</button>
+    <button>4. {}</button>
+
+    <div> Array in JavaScript can be used to store _______.</div>
+    <button>1. numbers and strings</button>
+    <button>2. other arrays</button>
+    <button>3. boolean</button>
+    <button>4. all of the above</button>
+
+    <div> The condition in an if / else statement is enclosed with _______.</div>
+    <button>1. quotes</button>
+    <button>2. curly brackets</button>
+    <button>3. parenthesis</button>
+    <button>4. square brackets</button>
+
+    <div> All done! </div>
+
 </body>
 </html>
