--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
     <button>4. square brackets</button>
 
     <div> All done! </div>
-
+<script src="assets/js/script.js"></script>
 </body>
 </html>
