--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 <h1 class="heads"> Code Quiz</h1>
 <h2 class="heads">Try and finish the quiz before the time runs out!</h2>
 <body>
-    <button> Start </button>
+    <button class="button"> Start </button>
     <div></div>
 
-    <div>Commanly used data types do NOT include: </div>
+    <!-- <div>Commanly used data types do NOT include: </div>
     <button>1. a boolean</button>
     <button>2. string</button>
     <button>3. alerts</button>
     <button>4. numbers</button>
+    
 
     <div> String values need to be enclosed with..</div>
     <button>1. ""</button>
@@ -36,9 +37,10 @@
     <button>1. quotes</button>
     <button>2. curly brackets</button>
     <button>3. parenthesis</button>
-    <button>4. square brackets</button>
+    <button>4. square brackets</button> -->
 
     <div> All done! </div>
 <script src="assets/js/script.js"></script>
+<script src="sample.js"></script>
 </body>
 </html>
