addin html comments

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <button>3. parenthesis</button>
     <button>4. square brackets</button> -->
 
-    <div> All done! </div>
+    <!-- <div> All done! </div> -->
 <script src="assets/js/script.js"></script>
-<script src="sample.js"></script>
+<!-- <script src="sample.js"></script> -->
 </body>
 </html>
