--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <h1 class="heads"> Code Quiz</h1>
 <h2 class="heads">Try and finish the quiz before the time runs out!</h2>
 <body>
+    <div class="main-container"> </div>
     <button class="button"> Start </button>
-    <div></div>
 
     <!-- <div>Commanly used data types do NOT include: </div>
     <button>1. a boolean</button>
