changed margin and padding

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 <h2 class="heads">Try and finish the quiz before the time runs out!</h2>
 <body>
     <div class="main-container"> </div>
+    <div class="main"> 
+        <h1>
+        Quiz will begin once the start button is clicked
+        </h1>
+    </div>
     <button class="button"> Start </button>
 
     <!-- <div>Commanly used data types do NOT include: </div>
