--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Code Quiz</title>
 </head>
-<header> View Highscores</header>
+<header class="scores"> View Highscores</header>
  <h1 class="timer"></h1> 
 <h2 class="heads">Try and finish the quiz before the time runs out!</h2>
 <body>
