--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Code Quiz</title>
 </head>
 <header class="score-container"></header>
-<header class="scores"> View Highscores</header>
+<header class="scores"> View Scores</header>
  <h1 class="timer"></h1> 
 <h2 class="heads">Try and finish the quiz before the time runs out!</h2>
 <body>
